# generate-the-biscuit

./: .gitignore  chocolate.html  generate_biscuit.py  index.html  knowledgebase.json  main.py  pyproject.toml  recipe.html  spice.html  style.css  sugar.html
css/: bootstrap.css  custom.css  font-icons.css  recipes-fonts.css
deta/: generate_biscuit.py  knowledgebase.json  main.py
recipes/: chocolate.html  spice.html
recipes/css/: animate.css  color.css  dark.css  fonts.css  layers.css  navigation.css  recipes.css  revolution.addon.liquideffect.css  settings.css
recipes/js/: jquery.js  pixi.min.js
